--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,17 @@
-#loginLink {
-align-content: right;
+
+#Login {
+float: right;
+top: 5px;
+right: 5px;
+border: 3px solid blue;
+padding: 5px;
+}
+
+#LoginForm{
+    border-radius: 12px;
+    margin: auto;
+    width: 200px;
+    border: 10px solid #77C1E6;
+    background: #77C1E6;
+    vertical-align: middle;
 }
