--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,6 +3,12 @@ body {
     margin: 0;
 }
 
+/* Responsive images */
+img.responsive {
+    width: 100%;
+    height: auto;
+}
+
 .auth-container {
     border-radius: 12px;
     border: 10px solid #77C1E6;
@@ -76,4 +82,14 @@ input, label {
 
 .message.message-error {
     border: thick solid darkred;
+}
+
+/* Profiel */
+img.profiel-foto {
+    width: 20%;
+}
+
+table.table-profiel th {
+    text-align: left;
+    width: 15em;
 }
