Fix urls, better layout home

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,7 +30,7 @@ img.responsive {
 
 .content {
     max-width: 70%;
-    margin: auto;
+    margin: auto auto 2em;
     border-radius: 12px;
     border: 10px solid #77C1E6;
     background: #77C1E6;
@@ -42,7 +42,7 @@ ul.nav {
     margin: 0 0 1em;
     padding: 0;
     overflow: hidden;
-    background-color: #eee;
+    background-color: #ff626c;
 }
 
 ul.nav li {
@@ -53,12 +53,12 @@ ul.nav li a {
     display: block;
     text-align: center;
     padding: 1em;
-    color: #1a4749;
+    color: #e8e8e8;
     text-decoration: none;
 }
 
 ul.nav li a:hover {
-    background-color: #bbb;
+    background-color: #d25b65;
 }
 
 ul.nav .right {
@@ -114,11 +114,16 @@ article.readable {
 }
 
 .profiel {
-    width: 30%;
+    width: 40%;
     float: left;
 
     margin: 2%;
     background-color: #ff626c;
     border: 1px solid black;
     border-radius: 12px;
+    height: 20em;
+}
+
+.profiel table {
+    margin-left: 2em;
 }
