--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,10 @@ div {
     overflow: hidden;
 }
 
+.clickable:hover {
+    cursor: pointer;
+}
+
 /* Responsive images */
 img.responsive {
     width: 100%;
@@ -126,4 +130,8 @@ article.readable {
 
 .profiel table {
     margin-left: 2em;
+}
+
+.profiel:active, .profiel:target {
+    background-color: rgba(255, 98, 108, 0.5);
 }
