--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,7 @@
 body {
     font-family: Verdana, sans-serif;
     margin: 0;
-    background-image: url(../img/SiteImages/BackGroundM.jpg);
+    background-image: url(../img/site_images/BackGroundM.jpg);
     background-size: 100%;
     background-color: #b36b00;
 }
@@ -16,7 +16,7 @@ div {
 
 /* Responsive images */
 img.responsive {
-    width: 100%;
+    max-width: 100%;
     height: auto;
 }
 
@@ -67,6 +67,10 @@ ul.nav li a:hover {
 
 ul.nav .right {
     float: right;
+}
+
+.svg-nav {
+    height: 1em !important;
 }
 
 /* Register */
