Profile images stick to border

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -131,7 +131,7 @@ article.readable {
     .profiel img {
         float: left;
 
-        margin: 0.5em;
+        margin: 0 0.5em 0.5em 0;
     }
 
     .profiel table {
@@ -144,7 +144,6 @@ article.readable {
     background-color: #ff626c;
     border: 1px solid black;
     border-radius: 12px;
-    height: 20em;
 }
 
 .profiel.clickable:active, .profiel.clickable:target {
