--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -151,3 +151,24 @@ article.readable {
 .profiel.clickable:active, .profiel.clickable:target {
     background-color: rgba(255, 98, 108, 0.5);
 }
+
+/* display */
+.button-like {
+    font-size: 1.2em;
+
+    padding: 0.5em;
+
+    background-color: white;
+    border-color: white;
+
+    float: right;
+}
+
+.button-like img {
+    height: 1.2em;
+    fill: red;
+}
+
+form.form-inline {
+    display: inline;
+}
