Automagic search (matching)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,7 +57,7 @@ ul.nav li a {
     display: block;
     text-align: center;
     padding: 1em;
-    color: #e8e8e8;
+    color: #fefefe;
     text-decoration: none;
 }
 
